--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <audio autoplay="autopaly">
+  <audio autoplay>
     <source src="mimi.mp3" type="audio/mp3" />
   </audio>
   <div id="main">
